# openconnect-gui

./: .gitignore  .gitlab-ci.yml  .mailmap  CHANGELOG.md  CMakeLists.txt  README.md  appveyor.yml  mingw-openconnect-gui.spec.in  release.sh
.gitlab/issue_templates/: Default.md  feature_request.md
.gitlab/merge_request_templates/: Default.md
CMake/Includes/: CMakeLists_qt-solutions.cmake.in  PatchFile.cmake  ProjectDependencies.cmake  ProjectExternals.cmake  ProjectExternals_openconnect.cmake  ProjectExternals_qt-solutions.cmake  ProjectExternals_tap-windows.cmake  ProjectExternals_vpnc-scripts-win.cmake  ProjectPackage.cmake  ProjectPackageConfig.cmake  ProjectSettings.cmake  clang-format.cmake  git_revision_generate.cmake
CMake/Modules/: FindOpenConnect.cmake
contrib/: build_deps_mingw@msys2.sh  build_mingw-openconnect-w32@fedora.sh  build_mingw-openconnect-w64@fedora.sh  build_mingw-openconnect@msys2.sh  build_mingw@msys2.sh  sign.sh  vpnc-script-win.js.patch
docs/: dev.md  dev_QtCreator.md  dev_commandLine.md  release.md  snapshots.md  sw_requirements.md  webpage.md
macos/: Info.plist
src/: CMakeLists.txt  FileLogger.cpp  OcSettings.h  cert.cpp  cert.h  common.h  config.h.in  cryptdata.cpp  gtdb.cpp  key.cpp  keypair.cpp  logger.cpp  main.cpp  server_storage.cpp  server_storage.h  vpninfo.cpp  vpninfo.h
src/dialog/: MyCertMsgBox.cpp  MyInputDialog.cpp  MyInputDialog.h  MyMsgBox.cpp  NewProfileDialog.cpp  NewProfileDialog.h  NewProfilePopup.cpp  NewProfilePopup.h  NewProfilePopup.ui  VpnProtocol.h  VpnProtocolModel.cpp  VpnProtocolModel.h  editdialog.cpp  editdialog.h  editdialog.ui  logdialog.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
